Added calap CLI
